<resources>
    <string name="app_name">CMS</string>

    <!--Login-->
    <string name="login">Login</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="error">Error</string>
    <string name="loginFailed">Login Failed !!!</string>
    <string name="enterUserName">between  3 and 50  alphanumeric characters</string>
    <string name="passwordError">between  6 and 50  alphanumeric characters</string>
    <string name="authenticating">Authenticating…</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="client">Client</string>
    <string name="addClient">Add Client</string>
    <string name="clientList">Client List</string>
    <string name="payments">Payments</string>
    <string name="creditPayment">Credit Payment</string>
    <string name="debitPayment">Paid Payment</string>
    <string name="repoting">Repoting</string>
    <string name="creditHistory">Credit History</string>
    <string name="paidHistory">Paid History</string>
    <string name="totalHistory">Total History</string>
    <string name="myAccount">My Account</string>
    <string name="changePassword">Change Password</string>
    <string name="profileUpdate">Profile Update</string>

    <string-array name="nav_item_activity_title">
        <item>@string/dashboard</item>
        <item>@string/addClient</item>
        <item>@string/clientList</item>
        <item>@string/creditPayment</item>
        <item>@string/debitPayment</item>
        <item>@string/creditHistory</item>
        <item>@string/paidHistory</item>
        <item>@string/totalHistory</item>
        <item>@string/changePassword</item>
        <item>@string/profileUpdate</item>
    </string-array>

    <string-array name="nav_item_activity_title_client">
        <item>@string/dashboard</item>
        <item>@string/totalHistory</item>
        <item>@string/changePassword</item>
        <item>@string/profileUpdate</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="status">Status</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="description">Description</string>

    <string-array name="status_array">
        <item>@string/active</item>
        <item>@string/inactive</item>
    </string-array>
    <string name="confromPassword">not match with password</string>
    <string name="pleaseWait">Please Wait . . .</string>
    <string name="validEmail">enter a valid email address</string>
    <string name="validPhone">enter a valid mobile number</string>
    <string name="success">Success</string>
    <string name="successfullyAccomplished">Successfully Accomplished</string>
    <string name="serverSays">Server Says That</string>
    <string name="save">Save</string>
    <string name="timeDate">Date &amp; Time</string>
    <string name="name">Name</string>
    <string name="balance">Balance</string>
    <string name="totalCredit">Total Credit</string>
    <string name="totalPaid">Total Paid</string>
    <string name="noInternet">There is no Internet connection</string>
    <string name="signOut">SING OUT</string>
    <string name="exitApp">Exit</string>
    <string name="areYouSure">Are you sure to EXIT ?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="lastLogin">Last Login</string>
    <string name="created">Created</string>
    <string name="selectToDate">To Date</string>
    <string name="selectFromDate">From Date</string>
    <string name="setDate">Set Date</string>
    <string name="ledger">Ledger</string>
    <string name="s_ledger">\'s ledger</string>
    <string name="s_profile">\'s profile</string>
    <string name="total_Summary">Total Summary</string>
    <string name="last_Paid">Last Paid</string>
    <string name="last_Credit">Last Credit</string>
    <string name="changeStatus">Change Status</string>
</resources>
