<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.rtsoftbd.siddiqui.clientmanagement.CreditPaymentFragment">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8sp"
        android:id="@+id/head"
        android:orientation="horizontal">

        <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/nameTextView"
            android:layout_weight="1" />

        <TextView
            android:text="@string/creditPayment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/mobileTextView"
            android:layout_weight="1" />

        <TextView
            android:text="@string/debitPayment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/balanceTextView"
            android:layout_weight="1" />

        <TextView
            android:text="@string/balance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/lastLoginTextView"
            android:layout_weight="1" />

    </LinearLayout>

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/head"
        android:layout_above="@+id/copy"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10sp"
        android:layout_alignParentBottom="true"
        app:srcCompat="@drawable/copyright"
        android:id="@+id/copy"/>

</RelativeLayout>
