<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rtsoftbd.siddiqui.clientmanagement.TotalHistoryFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15sp"
        android:id="@+id/head">

        <TextView
            android:text="@string/timeDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/timeDateTextView"
            android:layout_weight="1" />

        <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/nameTextView"
            android:layout_weight="1" />

        <TextView
            android:text="@string/creditPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/creditPaymentTextView"
            android:layout_weight="1" />

        <TextView
            android:text="@string/debitPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/debitPaymentTextView"
            android:layout_weight="1" />

        <TextView
            android:text="@string/balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/balanceTextView"
            android:layout_weight="1" />
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp"
        android:layout_below="@+id/head"
        android:layout_above="@+id/below"/>

    <include
        layout="@layout/date_get"
        android:layout_height="match_parent"
        android:layout_width="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/below">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/balance"
        android:layout_weight="1"
        android:id="@+id/totalCreditTextView"
        android:padding="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/balance"
        android:layout_weight="1"
        android:id="@+id/totalPaidTextView"
        android:padding="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/balance"
        android:layout_weight="1"
        android:id="@+id/totalBalanceTextView"
        android:padding="20sp"/>
    </LinearLayout>

</RelativeLayout>
